// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell render empty cell 1`] = `
.emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  cursor: pointer;
  border-right: 1px solid #c1c1c1;
  border-bottom: 1px solid #c1c1c1;
  width: 50px;
}

.emotion-0::before {
  content: "";
  display: block;
  padding-top: 100%;
}

.emotion-0:hover {
  background: #ececec;
}

.emotion-0 span {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<span
  className="emotion-0"
  width={50}
/>
`;

exports[`Cell render filled cell 1`] = `
.emotion-0 {
  position: relative;
  display: inline-block;
  -webkit-transition: 0.1s;
  transition: 0.1s;
  cursor: pointer;
  border-right: 1px solid #c1c1c1;
  border-bottom: 1px solid #c1c1c1;
  width: 50px;
  background: #000;
}

.emotion-0::before {
  content: "";
  display: block;
  padding-top: 100%;
}

.emotion-0:hover {
  background: #ececec;
}

.emotion-0 span {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

<span
  className="emotion-0"
  width={50}
/>
`;
